tests/fixtures/positive/code-style/MapInitializationMustBeMultiLine_MinEntries3.cls
public class Example {
    public void method() {
        Map<String, Integer> map = new Map<String, Integer>{ 'a' => 1, 'b' => 2 };
    }
}

