tests/fixtures/negative/naming/NoSingleLetterVariableNames.cls
public class Example {
    public void method() {
        Integer x = 5;  // Should trigger rule
        String s = 'test';  // Should trigger rule
        Boolean b = true;  // Should trigger rule
    }
}

